--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "~font-awesome/css/font-awesome.min.css";
+
+html {
+  height: 100%;
+}
+
+body {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-rendering: optimizeLegibility;
+  position: relative;
+  min-height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(150deg,#D5E3F1 15%,#FFFBD9 70%,#FFDFCB 94%);
+}
+span{
+  font-size: smaller;
+}
+h1 {
+  font-size: 2.0em;
+}
+
+.table-bordered, .table-bordered td, .table-bordered th {
+  border: 1px solid #2F465D;
+}
+i{
+  cursor: pointer;
+}
