"Added capitalize pipe"

--- a/src/app/components/bikes/bikes.component.html
+++ b/src/app/components/bikes/bikes.component.html
@@ -28,7 +28,7 @@
                 </tr>
                 <tr *ngFor="let bike of filteredList">
                     <td>
-                        {{bike.name}}
+                        {{bike.name | Capitalize}}
                     </td>
                     <td>
                         {{bike.email}}
